@@ -41,6 +41,7 @@ Changelog
  * Fix: Prevent new block IDs from being assigned on repeated calls to `StreamBlock.get_prep_value` (Colin Klein)
  * Fix: Prevent broken images in notification emails when static files are hosted on a remote domain (Eduard Luca)
  * Fix: Replace styleguide example avatar with default image to avoid issues when custom user model is used (Matt Westcott)
+ * Fix: `DraftailRichTextArea` is no longer treated as a hidden field by Django's form logic (Sergey Fedoseev)
 
 
 2.6.2 (19.09.2019)
